--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,8 @@ serialization = "1.9.0"
 coroutines = "1.10.2"
 coil = "3.3.0"
 navigation-compose = "2.9.6"
+material-compose = "1.7.3"
+cash-paging = "3.3.0-alpha02-0.5.1"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -52,13 +54,26 @@ koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin" }
 koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koin" }
 
+#icons
+materialIcons-extended = { module="org.jetbrains.compose.material:material-icons-extended", version.ref = "material-compose" }
+materialIcons-core = { module = "org.jetbrains.compose.material:material-icons-core", version.ref = "material-compose" }
+
 # SQLDelight
 sqldelight-android-driver = { module = "app.cash.sqldelight:android-driver", version.ref = "sqldelight" }
 sqldelight-native-driver = { module = "app.cash.sqldelight:native-driver", version.ref = "sqldelight" }
+sqldelight-paging3-extensions = { module = "app.cash.sqldelight:androidx-paging3-extensions", version.ref = "sqldelight"}
 sqldelight-coroutines-extensions = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqldelight" }
+sqldelight-runtime = { module = "app.cash.sqldelight:runtime", version.ref = "sqldelight"}
+
+
+#Paging
+paging-compose-common = { module = "app.cash.paging:paging-compose-common", version.ref = "cash-paging" }
+
+paging-common = { module = "app.cash.paging:paging-common", version.ref = "cash-paging" }
 
 # Coil
 coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
+coil-network-ktor = {module = "io.coil-kt.coil3:coil-network-ktor3", version.ref = "coil"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
